Hopefully this works

--- a/02-intro.Rmd
+++ b/02-intro.Rmd
@@ -1,1 +1,7 @@
-# Intro
+INTRODUCTION
+
+The study of inland water quality has captivated scientists and the public alike as water scarcity, pollution and degradation have taken front page in newspapers around the world. Lake condition, referred to as Trophic Status (TS), is a common metric used by limnologists, researchers, and natural resource managers to communicate about the state of lakes and to decide upon best management practices. Lakes are classified into one of several categories: most generally, oligotrophic, mesotrophic and eutrophic in increasing order of productivity. While productivity may seem positive, an excess of nutrients and organism can lead to harmful conditions for wildlife and the surrounding ecosystem, most often seen in the form of algal blooms, anoxic conditions and fish kills, but also including cyanotoxins which can be harmful not only to internal organisms but to passersby interacting with the system. The most common parameters used to determine TS in lentic ecosystems are Total Phosphorus (TP), Total Nitrogen (TN), and Chlorophyll A (Chl A). Sources for increased TN and TP in lakes. Chl A is perhaps the most commonly used metric for determining Trophic Status. These three metrics do not always align, however, and many professionals have differing opinions surrounding which is the most accurate and consistent metric for determining Trophic Status. There is a need for better understanding of long-term ecological health as it aligns with lake Trophic Status and changes over time. 
+	There is also some controversy surrounding the global condition of lakes. Many believe that global greening is occurring meaning that more and more lakes are shifting from oligotrophic or mesotrophic to eutrophic. Many other scientists believe that lakes have maintained more or less the same state over the past several decades. It is important to understand trophic condition (TS) because it can help to inform management decisions and trigger mitigation efforts and can also help scientists to understand aquatic ecology but as outlined above, agreeing upon metrics and global trends is not always straightforward. 
+	Driven in part by an increased interest in greening of lakes, some limnologists have begun studying the properties and patterns of the littoral zone. The understanding of the Littoral Zone and its relationship to Trophic Status, while growing, is still not well studied, or understood and there is a seeming lack of literature discussing these topics. The Littoral Zone is defined by the EPA as the nearshore area of a lake that extends from shore to the deepest point where submerged aquatic vegetation can be sustained or where the substrate receives one percent of light (US EPA, 2013). Macrophytes are “aquatic plants growing in or near water. They may be either emergent (i.e., with upright portions above the water surface), submerged or floating” and the macrophytes often studied and studied within this thesis live in the littoral zone of the lake (US EPA, 2013). Littoral Macrophytes can be a good indicator of ecological health: too few can indicate, according to the EPA, high turbidity, herbicides, or salinization while too many can indicate nutrient loading and can affect ecosystem health (US EPA, 2013).
+	A study in eastern Europe while another study in the Northern United States examined correlations between lake macrophyte cover and the surrounding lake and landscape features. Their study concluded that they were able to predict between 29 and 55 percent of variation in the littoral macrophyte coverage using multiple regressions of many parameters describing the lake and surrounding system (Cheruvelil & Soranno, 2008). This study examined parameters including physio-chemistry, land use and land cover, hydrology and more and concluded that while a suite of different variables can be used together with one another to predict macrophyte cover, different growth forms and species should be examined separately and that anthropogenic changes have significant impacts on macrophyte cover and can overwrite some of the natural or expected patterns (Cheruvelil & Soranno, 2008). This study did not examine changes over time or lakes in a wide range of ecosystems. Another, smaller-scale study in Western Europe examined six lakes that varied in Trophic Status and sampled many parameters investigating biological indicators to track responses in pelagic and littoral zones (Eigemann et al., 2016). This study concluded that while pelagic productivity changes, mainly phytoplankton density may be the best indicator of trophic changes on a short temporal scale, “macrophytes may better reflect the long-term consequences of eutrophication in littoral areas, which can affect the ecological status of lakes for decades” (Eigemann et al., 2016). This study also cited another paper that, upon investigating correlations between littoral macrophytes and other parameters hypothesized that a lack of correlation may not actually indicate a lack of relationship but may be indicating a longer-term ecosystem process at play, namely the uptake of Phosphorus and other nutrients into the littoral vegetation thus increasing macrophyte density over time and reducing P concentrations in the water (Schneider et al., 2020). 
+	While these studies have a grasp on some of the spatial variation driving these patterns, they have not examined the temporal variation that is so critical to understanding ecosystem processes. This thesis serves to investigate the role that littoral macrophytes can play in helping scientists and natural resource managers understand lake health and long-term trends in limnology that may not be immediately obvious from looking at traditional trophic metrics alone. Through the study of both temporal and spatial variation across lentic ecosystems in the United States both correlation and trends over time will be pursued. 
