--- a/05-discussion.Rmd
+++ b/05-discussion.Rmd
@@ -1,3 +1,8 @@
-# Discussion 
 
-Reference items in your bibliography file(s) - those ending in `.bib` - using `@key`. E.g. [@ross2019aquasat]
+	Eutrophication in lakes at temperate latitudes is a growing challenge for scientists and natural resource managers to mitigate and understand. This project investigates the relationship between a few variables, typically key predictor variables for Trophic Status and Fractional Littoral Macrophyte Coverage, attempting to draw correlations and 
+	A few potential sources of error in these analyses include complex and inconsistent raw datasets, sampling, and reporting techniques. The sample size included in the data analysis in this project only included the 142 sites that were classified as eutrophic in 2007 and where data was also available for the same sites in 2012 and 2017. In addition to these sources of error, there is some controversy surrounding how Trophic Status should be determined and I used general metrics outlined by the EPA in their NLA dataset to classify lakes as Eutrophic based on NTL, PTL or CHLA (PTL >= 25 | NTL >= 750 | CHLA >= 7) UNITS. The temporal limitations of this study were an additional challenge to the reliability of the results; only three years of data were available from the EPA through the NLA. If additional years of data are added to this program at some point, comparison of the trends in relationship to the new data would be required ot support the findings of this study. Finally, there are countless other variables that affect the growth patterns of littoral macrophytes and there could be some unexamined or unsampled parameters that had an outside effect on these variables and that indicated correlation when, in reality, there were other confounding variables. None of these variables should be used on their own to predict the trends of other variables. The ecology of aquatic systems is incredibly complex and a large spatial, temporal, and ecological study should be done in order to make any management decisions about lakes or their surrounding ecosystems. It is also important to study the species that present in these aquatic systems and to investigate if there is a correlation or relationship specific to the species of macrophyte present in the system. 
+	The analysis indicates that there may be a delayed response in the fractional macrophyte coverage compared to nutrient loading in the system.  OTHER RESULTS AND CLAIMS HERE
+	This analysis just barely scratches the surface of the complex relationships between different aquatic ecological principles and concepts. There is a great need for more assessments like the National Lakes Assessment and continuation of these studies over time to help provide researchers and natural resource managers with the information they need to classify lakes and manage their treatment. Further study could also be useful in the context of littoral macrophytes as a mechanism for uptake of excess nutrients in aquatic systems. While it is hard to prove causation in any large-scale study like this one, if the N and P inputs into the system were known, along with the existing concentrations of N and P, then change in nutrient levels could be measured against changes in littoral macrophyte cover to explore ecological solutions to significant challenges like eutrophication. 
+	Variables such as taxonomy, land use and land cover change in the basin, water temperature, sediment inputs and so much more could be useful to pair with a study like this one to better understand the relationships between these complex variables and their effect on the natural environment. 
+	In conclusion, this research helps to support the claims of Eigemann et al., 2016 that littoral macrophyte coverage could be a good indicator of long-term ecological health as well as sheds light on the interconnectivity of different ecological variables over time. Despite a lack of correlation for a given year between nutrient concentrations and amfcAll, when spread over a ten year period, the possible correlation became evident. This warrants further investigation with a larger dataset, a greater number of variables and most importantly a larger temporal scale. 
+	The gained understanding of trophic status can help scientists and natural resource managers better trigger mitigation efforts as well as improve communication surrounding the status of lentic water bodies. Finally, this study could help shed some light on the source scientific disagreement surrounding trophic trends of lakes worldwide.  
