--- a/03-methods.Rmd
+++ b/03-methods.Rmd
@@ -1,8 +1,20 @@
----
-title: "NLA"
+--- 
+title: "Bookdown Template"
 author: "Rebecca Rugg"
-date: "2023-02-09"
-output: html_document
+date: "`r Sys.Date()`"
+output:
+  bookdown::gitbook:
+    config:
+      toc:
+        depth: 2
+documentclass: book
+bibliography: [book.bib, packages.bib]
+# url: your book url like https://bookdown.org/USERNAME/REPO
+# cover-image: path to the social sharing image like images/cover.jpg
+description: | 
+      Methods for excecuting analysis
+link-citations: yes
+github-repo: rstudio/bookdown-demo
 ---
 
 ```{r setup, include=FALSE}
