--- a/04-results.Rmd
+++ b/04-results.Rmd
@@ -1,8 +1,18 @@
----
-title: "Results"
-author: "Rebecca Rugg"
-date: "2023-04-26"
-output: html_document
+--- 
+title: "Bookdown Template"
+author:
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+documentclass: book
+bibliography: [book.bib, packages.bib]
+# url: your book url like https://bookdown.org/USERNAME/REPO
+# cover-image: path to the social sharing image like images/cover.jpg
+description: |
+  This is a minimal example of using the bookdown package to write a book.
+  The HTML output format for this example is bookdown::gitbook,
+  set in the _output.yml file.
+link-citations: yes
+github-repo: rstudio/bookdown-demo
 ---
 
 ```{r setup, include=FALSE}
@@ -13,6 +23,7 @@ library(plotly)
 library(dplyr)
 library(tidyr)
 library(tidyverse)
+library(bookdown)
 ```
 
 RESULTS
